--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pandas==1.5.1
 Pillow==9.3.0
 pytz==2022.6
 seaborn==0.12.1
-sklearn==0.0.post1
+sklearn==0.0
 webencodings==0.5.1
 Werkzeug==2.2.2
 wincertstore==0.2
@@ -19,3 +19,12 @@ charset-normalizer==2.1.1
 requests==2.28.1 
 urllib3==1.26.12
 jsonify==0.5
+requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
+jinja==2.11.2
+gunicorn==20.0.4
+MarkupSafe==1.1.1
+click==7.1.2
+Werkzeug==1.0.1
+
