--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,28 @@
+charset-normalizer==2.1.1
 click==8.1.3
 contourpy==1.0.6
 cycler==0.11.0
 Flask==2.2.2
 fonttools==4.38.0
 itsdangerous==2.1.2
+joblib==1.2.0
+jsonify==0.5
 kiwisolver==1.4.4
 matplotlib==3.6.2
+mkl-fft==1.3.1
+mkl-service==2.4.0
 numpy==1.23.5
-pandas==1.5.1
+patsy==0.5.2
 Pillow==9.3.0
 pytz==2022.6
+requests==2.28.1
+scipy==1.9.3
 seaborn==0.12.1
 sklearn==0.0
+statsmodels==0.13.2
+threadpoolctl==3.1.0
+urllib3==1.26.12
 webencodings==0.5.1
 Werkzeug==2.2.2
 wincertstore==0.2
-charset-normalizer==2.1.1 
-requests==2.28.1 
-urllib3==1.26.12
-jsonify==0.5
-requests==2.28.1
-scikit-learn==0.23.1
-scipy==1.5.0
-jinja==2.11.2
-gunicorn==20.0.4
-MarkupSafe==1.1.1
-click==7.1.2
-Werkzeug==1.0.1
 
