--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,5 @@ threadpoolctl==3.1.0
 urllib3==1.26.12
 webencodings==0.5.1
 Werkzeug==2.2.2
-wincertstore==0.2
-guinvorn==20.1.0
+
+gunicorn==20.1.0
